# capsule-compression-with-oomph-lib

./: .axisym_solid_traction_elements.cc.kate-swp  .gitignore  AxisymmetricSolidTractionElemen-fill_in_contribution_to_residuals.h  Makefile  Makefile.am  Makefile.in  README.md  airy_cantilever.cc  airy_cantilever_ORG.cc  axisym_solid_elements.cc  axisym_solid_elements.h  axisym_solid_traction_elements.cc  axisym_solid_traction_elements.h  axisym_solid_traction_elements_CompilingVersion.h  axisym_solid_traction_elements_v12072016.h  axisym_spherical_solid.h  batch  batch_coars  batch_coarse  constitutive_law_yeoh.h  constitutive_law_yeoh.h~  contact_elements.h  contact_elements.h~  nohup.out  problem.cc  push_to_htcondor  runscript  solid_contact.cc  spherical_solid.cc  spherical_solid_compressed.cc  spherical_solid_imposedDisp.cc  spherical_solid_w_contact  spherical_solid_w_contact.cc
.deps/: airy_cantilever.Po  airy_cantilever2.Po  airy_cantilever2_adapt-airy_cantilever2.Po  spherical_solid.Po  spherical_solid_imposedDisp.Po  spherical_solid_w_contact.Po  spherical_solid_w_contact_static-spherical_solid_w_contact.Po
GH/: nohup.out  spherical_solid_w_contact
GH/RESLT/: Volume.txt
RESLT/: Volume.txt  soln_coarse_0.vtu  soln_coarse_1.vtu  soln_coarse_10.vtu  soln_coarse_101.vtu  soln_coarse_103.vtu  soln_coarse_104.vtu  soln_coarse_107.vtu  soln_coarse_109.vtu  soln_coarse_110.vtu  soln_coarse_113.vtu  soln_coarse_115.vtu  soln_coarse_116.vtu  soln_coarse_118.vtu  soln_coarse_12.vtu  soln_coarse_121.vtu  soln_coarse_122.vtu  soln_coarse_125.vtu  soln_coarse_126.vtu  soln_coarse_129.vtu  soln_coarse_130.vtu  soln_coarse_132.vtu  soln_coarse_134.vtu  soln_coarse_136.vtu  soln_coarse_138.vtu  soln_coarse_14.vtu  soln_coarse_140.vtu  soln_coarse_143.vtu  soln_coarse_144.vtu  soln_coarse_146.vtu  soln_coarse_149.vtu  soln_coarse_151.vtu  soln_coarse_153.vtu  soln_coarse_154.vtu  soln_coarse_156.vtu  soln_coarse_159.vtu  soln_coarse_16.vtu  soln_coarse_160.vtu  soln_coarse_19.vtu  soln_coarse_2.vtu  (+46 more)
genericRun/: rename_sol  rename_sol~
genericRun/MR_1_0/RESLT/: Volume.txt
genericRun/NeoHookian/: spherical_solid_w_contact
genericRun/RESLT_nreler=1_nt=1e-7_lambda=1.15_tshell=0.15_YEOH_C1=1.0_C2=1.0_C3=1.0/: Volume.txt  soln_1.vtu  soln_10.vtu  soln_101.vtu  soln_102.vtu  soln_105.vtu  soln_106.vtu  soln_109.vtu  soln_111.vtu  soln_112.vtu  soln_114.vtu  soln_117.vtu  soln_118.vtu  soln_12.vtu  soln_121.vtu  soln_122.vtu  soln_124.vtu  soln_126.vtu  soln_128.vtu  soln_130.vtu  soln_132.vtu  soln_135.vtu  soln_137.vtu  soln_139.vtu  soln_141.vtu  soln_143.vtu  soln_145.vtu  soln_146.vtu  soln_149.vtu  soln_15.vtu  soln_151.vtu  soln_153.vtu  soln_155.vtu  soln_157.vtu  soln_158.vtu  soln_160.vtu  soln_17.vtu  soln_18.vtu  soln_2.vtu  soln_20.vtu  (+45 more)
genericRun/Yeoh/: nohup.out
genericRun/Yeoh/RESLT/: Volume.txt  soln_coarse_0.vtu  soln_coarse_1.vtu  soln_coarse_100.vtu  soln_coarse_103.vtu  soln_coarse_105.vtu  soln_coarse_107.vtu  soln_coarse_108.vtu  soln_coarse_11.vtu  soln_coarse_111.vtu  soln_coarse_112.vtu  soln_coarse_115.vtu  soln_coarse_117.vtu  soln_coarse_119.vtu  soln_coarse_12.vtu  soln_coarse_120.vtu  soln_coarse_122.vtu  soln_coarse_124.vtu  soln_coarse_125.vtu  soln_coarse_127.vtu  soln_coarse_128.vtu  soln_coarse_13.vtu  soln_coarse_131.vtu  soln_coarse_132.vtu  soln_coarse_135.vtu  soln_coarse_136.vtu  soln_coarse_139.vtu  soln_coarse_140.vtu  soln_coarse_141.vtu  soln_coarse_143.vtu  soln_coarse_144.vtu  soln_coarse_145.vtu  soln_coarse_146.vtu  soln_coarse_147.vtu  soln_coarse_148.vtu  soln_coarse_149.vtu  soln_coarse_150.vtu  (+172 more)
genericRun/reslt_other/: Volume.txt  soln_1.vtu  soln_100.vtu  soln_102.vtu  soln_104.vtu  soln_107.vtu  soln_108.vtu  soln_11.vtu  soln_110.vtu  soln_113.vtu  soln_115.vtu  soln_116.vtu  soln_119.vtu  soln_12.vtu  soln_120.vtu  soln_122.vtu  soln_124.vtu  soln_127.vtu  soln_128.vtu  soln_131.vtu  soln_133.vtu  soln_134.vtu  soln_137.vtu  soln_139.vtu  soln_140.vtu  soln_142.vtu  soln_145.vtu  soln_146.vtu  soln_148.vtu  soln_15.vtu  soln_150.vtu  soln_153.vtu  soln_154.vtu  soln_156.vtu  soln_158.vtu  soln_16.vtu  soln_160.vtu  soln_18.vtu  soln_2.vtu  soln_21.vtu  (+45 more)
htcondor/: nohup.out
htcondor/RESLT/: Volume.txt
newtontolorance/nreler=1/: nohup.out  spherical_solid_w_contact
newtontolorance/nreler=2/: nohup.out  spherical_solid_w_contact
newtontolorance/nreler=4/: nohup.out
rerun15112016/YEOH-1-1-1/: spherical_solid_w_contact
restart/: nohup.out  spherical_solid_w_contact
restart/RESLT/: Volume.txt
runfromstart/: nohup.out  spherical_solid_w_contact
runfromstart/RESLT/: Volume.txt
script/: run_script  run_script~  spherical_solid_w_contact
script/RESLT/: Volume.txt
temp/: #nohup.out#  nohup.out  spherical_solid_w_contact
temp/RESLT/: Volume.txt  soln0.vtu  soln10.vtu  soln100.vtu  soln101.vtu  soln102.vtu  soln103.vtu  soln11.vtu  soln12.vtu  soln13.vtu  soln14.vtu  soln16.vtu  soln17.vtu  soln18.vtu  soln2.vtu  soln20.vtu  soln22.vtu  soln23.vtu  soln25.vtu  soln26.vtu  soln28.vtu  soln29.vtu  soln3.vtu  soln31.vtu  soln32.vtu  soln33.vtu  soln34.vtu  soln36.vtu  soln37.vtu  soln39.vtu  soln4.vtu  soln40.vtu  soln42.vtu  soln43.vtu  soln45.vtu  soln46.vtu  soln48.vtu  soln49.vtu  soln5.vtu  soln51.vtu  (+40 more)
(+17 files in other folders)
